# cloud-custodian

./: Makefile  requirements-dev.txt
.codebuild/: functional-aws.yml
c7n/: policy.py  provider.py  schema.py
c7n/filters/: core.py
c7n/resources/: __init__.py  aws.py
tests/: test_provider.py  test_sqs.py  zpill.py
tests/data/terraform/aws_sqs/: main.tf
tests/data/terraform/aws_sqs_kms/: main.tf
tools/c7n_terraform/: pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_terraform/c7n_terraform/: cli.py  commands.py  entry.py  parser.py  policy.py  provider.py  query.py  version.py
tools/c7n_terraform/c7n_terraform/console/: base.py  printer.py
tools/c7n_terraform/c7n_terraform/filters/: __init__.py  value.py
tools/c7n_terraform/c7n_terraform/resources/: blocks.py  resource_map.py
tools/c7n_terraform/tests/: test_parser.py  tf_common.py
tools/c7n_terraform/tests_terraform/: test_parser.py  test_resource_filter.py  test_value_filter.py  tf_common.py
tools/c7n_terraform/tests_terraform/data/tf-policy/: policy.yaml
